# ChangeLog for dev-java/jogl
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Apr 2007; Alistair John Bush <ali_bush@gentoo.org> ChangeLog:
  Bump jogl to latest version and unbundle gluegen from it. it is now very
  close to being tree ready :)

  29 Apr 2007; William L. Thomson Jr. <wltjr@gentoo.org> ChangeLog:
  Fixed deps per QA, added --build-only for antlr

  14 Mar 2007; <alistair@gentoo.org> ChangeLog:
  Updated to latest version of jogl and unbundled gluegen

  11 Mar 2007; Alistair Bush <alistair.bush@gmail.com> jogl-1.0.0-r1.ebuild:
  Rev bump to jogl-1.0.0-r1 to attempt to unbundle gluegen
