@@ -10,7 +10,8 @@ DIST jogl-1.1.0-src.zip 2251921 RMD160 3c8314ed793e8b029477e0c139ba4c7e640274e8 
 DIST jogl-1_0_0-src.zip 1445577 RMD160 ea09614b45463410c3f4b1255a35a95869fa45dc SHA1 f665077dd60327b7e8945ebc84e1c6eaed192fa4 SHA256 509673d4aa345dad2537f41a030f714a3901e3922ca2e81caca409bb39178ff6
 EBUILD jogl-1.0.0-r1.ebuild 2053 RMD160 eeb1e2be6c736c3f412d62bf94cfe73138d41c61 SHA1 5756a05959bb70f4736c41da75193801296adc0e SHA256 2554fe1cfd329d1fe724d0aa243dae2c30f330edc36c1dfd09d2a2c3df91529b
 EBUILD jogl-1.0.0.ebuild 1779 RMD160 050611c736bd4e6f6d433a40d21bacac64f96754 SHA1 a2b7cc7fe8c04a105f1d0397d3be7a9322be3a16 SHA256 7b3ad9afb9c721cc2099160e8e17c7046a55410e1864b80a41b703ada5a1e1e1
+EBUILD jogl-1.1.0-r1.ebuild 1864 RMD160 faa50647736bcb3ff15ca555eba93875cace9a5e SHA1 f34d4eedb1e28b485b690514f3ce5bccbbac08f2 SHA256 7f36c80ae2388ce629e4030b0d55f667b90f11fa842de346a6824ce6d38c1395
 EBUILD jogl-1.1.0.ebuild 1971 RMD160 a051857cfabbeb0e184b70f63df8b86bddc45b08 SHA1 a08740d01ab64032652422019f70d30352340ba7 SHA256 08b4c41162c2cd3a1cc28e76637c2b4a6703cb895024ff61519bd7c033d25a2c
 EBUILD jogl-1.1.0_rc3.ebuild 2036 RMD160 e7ef43072e92f3fab19d45a58dba8d947508ca18 SHA1 f0347a7852ced521d2aa4b8fd2b621d06bc2033e SHA256 4b5801bc0b2800191da3a25ea4145c9573e020ca40ef6872a636a875cee942de
-MISC ChangeLog 651 RMD160 9cdaefc00290dc3a489681241bf1a7db029bb604 SHA1 7c529094533fd24748143eea94b571d9f27c03b5 SHA256 a32dc02d8541d0f145d06eda37c40e8b1a38696dafa2d1b12f18b8a102de0bb0
+MISC ChangeLog 784 RMD160 849bc18434b260a3999df7f425c7a91eb005df0e SHA1 9366f2af984fc39b59d4864f0ef486daf5341882 SHA256 e15075003bb2d547cf02c482853fe340ef5da5817654d28a47386eb8c127f3ee
 MISC metadata.xml 362 RMD160 76ec91a28c7e7fae828a05ff3b378aec09af6fc2 SHA1 76a2ac9b977db25a8133a66a9145c37a5d0bea24 SHA256 e23a8dff1a76bb75fe51de2da0515357a3e9423249f04842400a38e0a95c776b
